# benemaple-api

./: .env.example  .gitignore  README.md  TIPS.md  pyproject.toml
app/: api.py  schemas.py  source_builder.py  sse.py
benemaple_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/catalog/: documents.jsonl
data/index/: default__vector_store.json  docstore.json  index_store.json
pipeline/: catalog_loader.py  document_builder.py  llamaparse_client.py  llm_client.py  node_builder.py  node_store.py  rag_query.py  vector_index.py
scripts/: ask_rag.py  export_nodes.py  import_doc.py  index_nodes.py  parse_document_once.py  preview_nodes.py  search_nodes.py
