[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "benemaple-api"
version = "0.1.0"
description = "FastAPI backend for BeneMaple's Canadian benefits RAG service."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi[standard]>=0.139,<1.0",
  "openai>=2,<3",
  "python-dotenv>=1,<2",
  "llama-cloud>=2.10,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]